--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/kit": "^1.20.4",
 		"autoprefixer": "^10.4.14",
 		"carbon-components-svelte": "^0.79.0",
+		"carbon-icons-svelte": "^12.1.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
@@ -31,9 +32,11 @@
 		"tailwindcss": "^3.3.3",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
-		"vitest": "^0.32.2",
-		"carbon-icons-svelte": "^12.1.0"
+		"vitest": "^0.32.2"
 	},
 	"type": "module",
-	"dependencies": {}
+	"dependencies": {
+		"zod": "^3.21.4",
+		"pocketbase": "^0.16.0"
+	}
 }
