--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
 	"type": "module",
 	"dependencies": {
 		"zod": "^3.21.4",
-		"pocketbase": "^0.16.0"
+		"pocketbase": "^0.16.0",
+		"gridjs": "^6.0.6",
+		"gridjs-svelte": "^2.1.1"
 	}
 }
