--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@playwright/test": "^1.28.1",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-node": "^1.3.1",
+    "@sveltejs/adapter-vercel": "^3.0.3",
     "@sveltejs/kit": "^1.20.4",
     "autoprefixer": "^10.4.14",
     "carbon-components-svelte": "^0.79.0",
