--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"autoprefixer": "^10.4.14",
 		"carbon-components-svelte": "^0.79.0",
 		"carbon-icons-svelte": "^12.1.0",
+		"carbon-pictograms-svelte": "^12.8.0",
 		"d3": "^7.8.5",
 		"d3-cloud": "^1.2.7",
 		"d3-sankey": "^0.12.3",
